--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
           <a href="" class="link web">Web<span class="logo-studio">Studio</span></a>
          <!-- Site nav -->
          <ul class="nav list">
-          <li class="item"><a href="./index.html" class="link site-nav">Студія</a></li>
-          <li class="item"><a href="./portfolio.html" class="link current">Портфоліо</a></li>
+          <li class="item"><a href="./index.html" class="link current ">Студія</a></li>
+          <li class="item"><a href="./portfolio.html" class="link site-nav">Портфоліо</a></li>
           <li class="item"><a href="" class="link site-nav">Контакти</a></li>
        </ul>
         </nav>
@@ -95,6 +95,7 @@
               </svg>
             </div>
               <h3 class="card-list__title">Пунктуальність</h3>
+              <p class="card-list__text">
                 Завдання організації, обливо рамки і місце навчання кадрів тягне у себе.
               </p>
 
@@ -161,7 +162,7 @@
              <li class="item-team">
                <img src="images/img1_1.jpg" alt="Фото Ігор" width="270" />
                <div class="team-content">
-                <a class="new-team"
+                <!-- <a class="new-team" -->
                  <h3 class="team-title">Ігор Дем'яненко</h3>
                  <p lang="en" class="team-proffesion">Product Designer</p>
                        <ul class="team-soc-list list">
